[package]
name = "image-effects-wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasm-bindgen = "0.2.84"
base64 = "0.21.0"
image = "0.24.5"

[dependencies.web-sys]
version = "0.3.61"
features = ["console"]